fix: Fix portable version launch issues